k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: umap
  labels:
    name: umap
    environment: production
